Version 2.1.12, 1 June 2017

The manual links to Glacier, a class immutability checker.

The stubparser license has been updated.  You can now use stubparser under
either the LGPL or the Apache license, whichever you prefer.

Closed issues:
254, 1201, 1229, 1236, 1239, 1240, 1257, 1265, 1270, 1271, 1272, 1274, 1288,
1291, 1299, 1304, 1305.

---------------------------------------------------------------------------

Version 2.1.11, 1 May 2017

The manual contains new FAQ (frequently asked questions) sections about
false positive warnings and about inference for field types.

Closed issues:
989, 1096, 1136, 1228.

---------------------------------------------------------------------------

Version 2.1.10, 3 April 2017

The Constant Value Checker, which performs constant propagation, has been
extended to perform interval analysis -- that is, it determines, for each
expression, a statically-known lower and upper bound.  Use the new
@IntRange annotation to express this.  Thanks to Jiasen (Jason) Xu for this
feature.

Closed issues:
134, 216, 227, 307, 334, 437, 445, 718, 1044, 1045, 1051, 1052, 1054, 1055,
1059, 1077, 1087, 1102, 1108, 1110, 1111, 1120, 1124, 1127, 1132.

---------------------------------------------------------------------------

Version 2.1.9, 1 March 2017

By default, uninferred method type arguments, which can happen with Java 8
style target type contexts, are silently ignored, removing many false
positives.  The new option -AconservativeUninferredTypeArguments can be used to
get the conservative behavior.

Closed issues:
1006, 1011, 1015, 1027, 1035, 1036, 1037, 1039, 1043, 1046, 1049, 1053, 1072,
1084.

---------------------------------------------------------------------------

Version 2.1.8, 20 January 2017

The Checker Framework webpage has moved to https://checkerframework.org/.
Old URLs should redirect to the new one, but please update your links
and let us know if any old links are broken rather than redirecting.
