@@ -839,6 +839,13 @@
         </antcall>
     </target>
 
+    <target name="optional-tests" depends="jar,build-tests"
+            description="Run tests for the Optional Checker">
+        <antcall target="-run-tests">
+            <param name="param" value="tests.OptionalTest"/>
+        </antcall>
+    </target>
+
     <target name="interning-tests" depends="jar,build-tests"
             description="Run tests for the Interning Checker">
         <antcall target="-run-tests">
