@@ -37,6 +37,8 @@ Export-Package: org.checkerframework.common.basetype,
  org.checkerframework.checker.lock.qual,
  org.checkerframework.checker.nullness,
  org.checkerframework.checker.nullness.qual,
+ org.checkerframework.checker.optional,
+ org.checkerframework.checker.optional.qual,
  org.checkerframework.checker.propkey,
  org.checkerframework.checker.propkey.qual,
  org.checkerframework.framework.qual,
