@@ -8,6 +8,7 @@ import org.checkerframework.checker.i18n.I18nChecker;
 import org.checkerframework.checker.i18nformatter.I18nFormatterChecker;
 import org.checkerframework.checker.index.IndexChecker;
 import org.checkerframework.checker.interning.InterningChecker;
+import org.checkerframework.checker.interning.OptionalChecker;
 import org.checkerframework.checker.linear.LinearChecker;
 import org.checkerframework.checker.lock.LockChecker;
 import org.checkerframework.checker.nullness.NullnessChecker;
@@ -60,6 +61,7 @@ public class CheckerInfo {
                     Arrays.asList(
                             new CheckerInfo("Nullness Checker", NullnessChecker.class),
                             new CheckerInfo("Interning Checker", InterningChecker.class),
+                            new CheckerInfo("Optional Checker", OptionalChecker.class),
                             new CheckerInfo("Lock Checker", LockChecker.class),
                             new CheckerInfo("Fenum Checker", FenumChecker.class),
                             new CheckerInfo("Index Checker", IndexChecker.class),
