@@ -1,3 +1,9 @@
+---------------------------------------------------------------------------
+
+Adds Optional Checker to verify uses of Java 8's Optional class.
+
+---------------------------------------------------------------------------
+
 Version 2.1.12, 1 June 2017
 
 The manual links to Glacier, a class immutability checker.
